Override main tree layout pane overflow to avoid visible scrolling

--- a/plugins/jmx/less/layout.less
+++ b/plugins/jmx/less/layout.less
@@ -90,6 +90,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: auto;
 
   h1 {
     margin-left: @pf-padding;
